Fixed Bug #27908 (xml default_handlers not being called) Fix memleak when entitydecls are parsed remove old ifdefs

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@198222 c90b9560-bf6c-de11-be94-00142212c4b1